--- a/app/views/nimbleshop_simply/shared/_order_summary_shipping_address.html.erb
+++ b/app/views/nimbleshop_simply/shared/_order_summary_shipping_address.html.erb
@@ -16,7 +16,7 @@
         <h3> Billing address </h3>
 
         <address class='billing-address'>
-        <% if current_order.shipping_address.use_for_billing %>
+        <% if current_order.shipping_address.try(:use_for_billing) %>
           <i>Same as shipping address</i>
         <% else %>
           <%= display_address(current_order.billing_address) %>
