--- a/app/assets/stylesheets/nimbleshop_simply/custom.css.scss
+++ b/app/assets/stylesheets/nimbleshop_simply/custom.css.scss
@@ -257,3 +257,8 @@ img.thumbnail:hover {
 #products-index li.product_info:hover, #product_groups-show li.product_info:hover {
   border-color: #08c;
 }
+
+body {
+  background: green;
+}
+
