--- a/app/assets/stylesheets/nimbleshop_simply/custom.css.scss
+++ b/app/assets/stylesheets/nimbleshop_simply/custom.css.scss
@@ -254,6 +254,10 @@ img.thumbnail:hover {
   border: 1px solid #ddd;
 }
 
+body {
+  background: green;
+}
+
 #products-index li.product_info:hover, #product_groups-show li.product_info:hover {
   border-color: #08c;
 }
